k8s/manifests-a051e4/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-a051e4
  namespace: journee
  labels:
    app: journee-a051e4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-a051e4
  template:
    metadata:
      labels:
        app: journee-a051e4
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-a051e4
          image: gcr.io/my-docker-471807/journee:a051e4-eb6ba0
          ports:
            - containerPort: 3000
