k8s/manifests-a051e4/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-a051e4
  namespace: journee
spec:
  selector:
    app: journee-a051e4
  ports:
    - port: 80
      targetPort: 3000
